--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -348,6 +348,7 @@
     <Compile Include="Areas\Inventario\Controllers\CatalogoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\CatalogoTipoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\CategoriaController.cs" />
+    <Compile Include="Areas\Inventario\Controllers\ConsignacionController.cs" />
     <Compile Include="Areas\Inventario\Controllers\DevolucionInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\DistribucionPorLoteController.cs" />
     <Compile Include="Areas\Inventario\Controllers\EgresoInventarioController.cs" />
@@ -9295,6 +9296,13 @@
     <Content Include="Areas\General\Views\TarjetaCreditoPorProveedor\Anular.cshtml" />
     <Content Include="Areas\General\Views\TarjetaCreditoPorProveedor\_GridViewPartial_tarjeta_credito_proveedor.cshtml" />
     <Content Include="Areas\General\Views\TarjetaCreditoPorProveedor\_CmbProveedor_TarjetaCredito.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\_GridViewPartial_consignacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\_CmbProveedor_Consignacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\Nuevo.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\Modificar.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\Anular.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\_CmbSucursal_Consignacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
