--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9315,6 +9315,7 @@
     <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\Modificar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\Anular.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\OrdenPago\_CmbFlujo_OP.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\OrdenPago\_CmbPersona_OP.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
