--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -371,6 +371,8 @@
     <Compile Include="RRHH\ro_departamento_Info.cs" />
     <Compile Include="RRHH\ro_division_Info.cs" />
     <Compile Include="RRHH\ro_DocumentoxEmp_Info.cs" />
+    <Compile Include="RRHH\ro_EmpleadoNovedadCargaMasiva_det_Info.cs" />
+    <Compile Include="RRHH\ro_EmpleadoNovedadCargaMasiva_Info.cs" />
     <Compile Include="RRHH\ro_empleado_Info.cs" />
     <Compile Include="RRHH\ro_empleado_novedad_det_Info.cs" />
     <Compile Include="RRHH\ro_empleado_novedad_Info.cs" />
