--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -340,6 +340,8 @@
     <Compile Include="RRHH\ro_departamento_Bus.cs" />
     <Compile Include="RRHH\ro_division_Bus.cs" />
     <Compile Include="RRHH\ro_DocumentoxEmp_Bus.cs" />
+    <Compile Include="RRHH\ro_EmpleadoNovedadCargaMasiva_Bus.cs" />
+    <Compile Include="RRHH\ro_EmpleadoNovedadCargaMasiva_det_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_estudios_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_novedad_Bus.cs" />
