--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -431,6 +431,8 @@
     <Compile Include="cxc_Parametro.cs">
       <DependentUpon>Model_cuentas_por_cobrar.tt</DependentUpon>
     </Compile>
+    <Compile Include="Facturacion\fa_CambioProductoDet_Data.cs" />
+    <Compile Include="Facturacion\fa_CambioProducto_Data.cs" />
     <Compile Include="Facturacion\fa_catalogo_Data.cs" />
     <Compile Include="Facturacion\fa_catalogo_tipo_Data.cs" />
     <Compile Include="Facturacion\fa_cliente_contactos_Data.cs" />
@@ -457,6 +459,12 @@
     <Compile Include="Facturacion\fa_TipoNota_Data.cs" />
     <Compile Include="Facturacion\fa_TipoNota_x_Empresa_x_Sucursal_Data.cs" />
     <Compile Include="Facturacion\fa_Vendedor_Data.cs" />
+    <Compile Include="fa_CambioProducto.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="fa_CambioProductoDet.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
     <Compile Include="fa_catalogo.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
