--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9319,6 +9319,7 @@
     <Content Include="Areas\Facturacion\Views\CambioProducto\Index.cshtml" />
     <Content Include="Areas\Facturacion\Views\CambioProducto\_GridViewPartial_CambioProducto.cshtml" />
     <Content Include="Areas\Inventario\Views\Consignacion\_GridViewPartial_consignacion_det.cshtml" />
+    <Content Include="Areas\Inventario\Views\Consignacion\_CmbProducto_Consignacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
