--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -676,10 +676,10 @@
     <Compile Include="in_categorias.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
-    <Compile Include="In_consignacion.cs">
+    <Compile Include="in_Consignacion.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
-    <Compile Include="in_consignacion_det.cs">
+    <Compile Include="in_ConsignacionDet.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="in_devolucion_inven.cs">
@@ -1862,10 +1862,10 @@
     <Compile Include="VWINV_011.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
-    <Compile Include="vwin_consignacion.cs">
+    <Compile Include="vwin_Consignacion.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
-    <Compile Include="vwin_consignacion_detalle.cs">
+    <Compile Include="vwin_ConsignacionDet.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="vwin_devolucion_inven_det.cs">
