--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -643,7 +643,7 @@
     <Compile Include="Inventario\in_Catalogo_Data.cs" />
     <Compile Include="Inventario\in_categorias_Data.cs" />
     <Compile Include="Inventario\in_Consignacion_Data.cs" />
-    <Compile Include="Inventario\in_Consignacion_det_Data.cs" />
+    <Compile Include="Inventario\in_ConsignacionDet_Data.cs" />
     <Compile Include="Inventario\in_devolucion_inven_Data.cs" />
     <Compile Include="Inventario\in_devolucion_inven_det_Data.cs" />
     <Compile Include="Inventario\in_grupo_Data.cs" />
