--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1769,6 +1769,12 @@
     <Compile Include="vwfa_CambioProducto.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwfa_CambioProductoDet.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwfa_CambioProductoDet_facturas.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwfa_cliente_consulta.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
