--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9348,6 +9348,10 @@
     <Content Include="Areas\Facturacion\Views\CambioProducto\_GridViewPartial_CambioProductoDetFacturas.cshtml" />
     <Content Include="Areas\Facturacion\Views\CambioProducto\_CmbProducto_CambioProducto.cshtml" />
     <Fakes Include="Fakes\System.Xml.Linq.fakes" />
+    <Content Include="Areas\CuentasPorPagar\Views\NotaDebito\_CmbFlujo_ND.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\_CmbFlujo_ND_B.cshtml" />
+    <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\_CmbFlujo_ND_C.cshtml" />
+    <Content Include="Areas\Banco\Views\DepositoBanco\_CmbFlujo_Deposito.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
