--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9352,6 +9352,7 @@
     <Content Include="Areas\Banco\Views\NotaDeDebitoBanco\_CmbFlujo_ND_B.cshtml" />
     <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\_CmbFlujo_ND_C.cshtml" />
     <Content Include="Areas\Banco\Views\DepositoBanco\_CmbFlujo_Deposito.cshtml" />
+    <Content Include="Areas\Banco\Views\ChequeBanco\_CmbFlujo_Cheque.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
