--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -314,6 +314,7 @@
     <Compile Include="Reportes\Facturacion\FAC_009_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_010_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_011_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_012_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Info.cs" />
