--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9359,6 +9359,7 @@
     <Content Include="Areas\Banco\Views\NotaDeCreditoBanco\_CmbFlujo_ND_C.cshtml" />
     <Content Include="Areas\Banco\Views\DepositoBanco\_CmbFlujo_Deposito.cshtml" />
     <Content Include="Areas\Banco\Views\ChequeBanco\_CmbFlujo_Cheque.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_012.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
