--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Facturacion\fa_cliente_x_fa_Vendedor_x_sucursal_Info.cs" />
     <Compile Include="Facturacion\fa_cuotas_x_doc_Info.cs" />
     <Compile Include="Facturacion\fa_factura_det_Info.cs" />
+    <Compile Include="Facturacion\fa_factura_det_x_in_Ing_Egr_Inven_det_Info.cs" />
     <Compile Include="Facturacion\fa_factura_Info.cs" />
     <Compile Include="Facturacion\fa_factura_x_fa_guia_remision_Info.cs" />
     <Compile Include="Facturacion\fa_formaPago_Info.cs" />
