--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -271,6 +271,7 @@
     <Compile Include="Areas\Caja\Controllers\ParametroCajaController.cs" />
     <Compile Include="Areas\Caja\Controllers\TipoMovimientoCajaController.cs" />
     <Compile Include="Areas\Compras\ComprasAreaRegistration.cs" />
+    <Compile Include="Areas\Compras\Controllers\AprobacionOCController.cs" />
     <Compile Include="Areas\Compras\Controllers\CatalogoComprasController.cs" />
     <Compile Include="Areas\Compras\Controllers\CatalogoTipoComprasController.cs" />
     <Compile Include="Areas\Compras\Controllers\CompradorController.cs" />
@@ -9442,6 +9443,7 @@
     <Folder Include="Areas\Banco\Models\" />
     <Folder Include="Areas\Caja\Models\" />
     <Folder Include="Areas\Compras\Models\" />
+    <Folder Include="Areas\Compras\Views\AprobacionOC\" />
     <Folder Include="Areas\Contabilidad\Models\" />
     <Folder Include="Areas\CuentasPorCobrar\Models\" />
     <Folder Include="Areas\CuentasPorPagar\Models\" />
