--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1266,6 +1266,7 @@
     <Compile Include="RRHH\Rdep_Data.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Data.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Data.cs" />
+    <Compile Include="RRHH\ro_archivosCSV_Data.cs" />
     <Compile Include="RRHH\ro_archivos_bancos_generacion_Data.cs" />
     <Compile Include="RRHH\ro_archivos_bancos_generacion_x_empleado_Data.cs" />
     <Compile Include="RRHH\ro_area_Data.cs" />
