--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -357,6 +357,7 @@
     <Compile Include="Reportes\RRHH\ROL_017_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_019_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_018_Info.cs" />
+    <Compile Include="RRHH\MTE\ro_archivosCSV_Info.cs" />
     <Compile Include="RRHH\RDEP\Rdep.cs" />
     <Compile Include="RRHH\RDEP\Rdep_Info.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Info.cs" />
