--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -275,6 +275,7 @@
     <Compile Include="Reportes\Banco\BAN_007_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Info.cs" />
+    <Compile Include="Reportes\Compra\COMP_001_Info.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_002_Info.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_003_balances_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Info.cs" />
