--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Contabilidad\ct_cbtecble_det_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_tipo_Info.cs" />
+    <Compile Include="Contabilidad\ct_gasto_Info.cs" />
     <Compile Include="Contabilidad\ct_grupocble_Info.cs" />
     <Compile Include="Contabilidad\ct_parametro_Info.cs" />
     <Compile Include="Contabilidad\ct_periodo_Info.cs" />
