--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -285,6 +285,7 @@
     <Compile Include="Areas\Contabilidad\Controllers\AnioFiscalController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\ATSController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\ComprobanteContableController.cs" />
+    <Compile Include="Areas\Contabilidad\Controllers\GastoController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\GrupoContableController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\ParametroContableController.cs" />
     <Compile Include="Areas\Contabilidad\Controllers\PeriodoContableController.cs" />
@@ -9383,6 +9384,11 @@
     <Content Include="Areas\Compras\Views\AprobacionOC\Index.cshtml" />
     <Content Include="Areas\Compras\Views\AprobacionOC\_GridViewPartial_aprobacion_oc.cshtml" />
     <Content Include="Areas\Reportes\Views\CompraReportes\COMP_001.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\Gasto\_GridViewPartial_Gasto.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\Gasto\Anular.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\Gasto\Index.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\Gasto\Modificar.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\Gasto\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
