--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Inventario\in_transferencia_Info.cs" />
     <Compile Include="Inventario\in_UnidadMedida_Equiv_conversion_Info.cs" />
     <Compile Include="Inventario\in_UnidadMedida_Info.cs" />
+    <Compile Include="Presupuesto\pre_rubro_Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Info.cs" />
