--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -391,6 +391,7 @@
     <Compile Include="Areas\Inventario\Controllers\TransferenciasInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\UnidadDeMedidaController.cs" />
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
+    <Compile Include="Areas\Presupuesto\Controllers\RubroController.cs" />
     <Compile Include="Areas\Reportes\Controllers\ActivoFijoReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\BancoReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\CajaReportesController.cs" />
@@ -9389,6 +9390,10 @@
     <Content Include="Areas\Facturacion\Views\FormaPago\Modificar.cshtml" />
     <Content Include="Areas\Facturacion\Views\FormaPago\Anular.cshtml" />
     <Content Include="Areas\Facturacion\Views\FormaPago\_GridViewPartial_forma_pago.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Rubro\_GridViewPartial_Rubro.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Rubro\Index.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Rubro\Nuevo.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Rubro\_GridViewPartial.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9466,6 +9471,7 @@
     <Folder Include="Areas\General\Models\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
+    <Folder Include="Areas\Presupuesto\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
     <Folder Include="Areas\SeguridadAcceso\Models\" />
