--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1163,6 +1163,9 @@
     <Compile Include="ro_empleado.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="ro_EmpleadoFoto.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="ro_EmpleadoNovedadCargaMasiva.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -1314,6 +1317,7 @@
     <Compile Include="RRHH\ro_departamento_Data.cs" />
     <Compile Include="RRHH\ro_division_Data.cs" />
     <Compile Include="RRHH\ro_DocumentoxEmp_Data.cs" />
+    <Compile Include="RRHH\ro_EmpleadoFoto_Data.cs" />
     <Compile Include="RRHH\ro_EmpleadoNovedadCargaMasiva_Data.cs" />
     <Compile Include="RRHH\ro_EmpleadoNovedadCargaMasiva_det_Data.cs" />
     <Compile Include="RRHH\ro_empleado_Data.cs" />
